--- a/plan-detail.css
+++ b/plan-detail.css
@@ -142,4 +142,19 @@ h3{
     font-family: 'BodyTextFont';
     src: url('f2.ttf') format('truetype');
     font-weight: normal;
+
+}
+.class{
+	…
+}
+
+@media screen and (max-width:991){
+ 	 .class{
+		…
+	}
+}
+@media screen and (max-width : 767px){
+ 	 .class{
+		…
+	}
 }
