--- a/product.css
+++ b/product.css
@@ -136,4 +136,20 @@ h2{
     font-family: 'BodyTextFont';
     src: url('f2.ttf') format('truetype');
     font-weight: normal;
+
+}
+
+.class{
+	…
+}
+
+@media screen and (max-width:991){
+ 	 .class{
+		…
+	}
+}
+@media screen and (max-width : 767px){
+ 	 .class{
+		…
+	}
 }
